--- a/app/templates/comms/feedback/feedback.html
+++ b/app/templates/comms/feedback/feedback.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <p class="title selectable" style="margin: auto;margin-bottom: 10px;">Feedback</p>
-<div class="container floater" style="text-align: center; height:636px; ">
+<div class="container floater" style="text-align: center; min-height:636px; ">
 	<!-- Create feedback -->
 	<div style="display: flex; width:100%; margin-bottom: 10px;">
 		<figure class="image is-48x48" style="width:40px;height: 40px; float: left; margin-right: 5px;">
@@ -18,9 +18,9 @@
   </div>
 
     <!-- Filter feedback -->
-    <div class="is-centered" style="background-color: #ffff; border-radius: 10px; clear: both; padding: 5px; margin: auto;">
-    <div class="field is-expanded has-addons" style="float:left; margin-right: 10px;">
-    			<p class="control has-icons-left">
+    <div class="is-centered" style="background-color: #ffff; border-radius: 10px; clear: both; padding: 5px; margin: auto; display: flex;">
+    <div class="field is-expanded has-addons" style="float:left; margin-right: 10px; flex-shrink: 1;">
+    			<p class="control has-icons-left" style="min-width: 50px;">
                     <input id="search-feedback" class="input" type="location" placeholder='Search feedback' {% if search %}value="{{search}}"{% endif %}>
                     <span class="icon is-small is-left">
 	                    	<i class="fa fa-search"></i>
@@ -465,6 +465,33 @@ function searchFeedback(search,by,page=1,do_redirect=true) {
 		text-overflow: ellipsis;
 				  white-space: nowrap;
 				  				  overflow: hidden;
+
+	}
+
+	@media (max-width:410px) {
+
+	.pagination-space span {
+		padding: 8px;
+				width: 18px;
+
+	}
+
+}
+	@media (max-width:370px) {
+
+		.pagination-space {
+			width: 10px;
+		}
+
+	.pagination-ellipsis {
+		content: "";
+		width: 10px;
+		/* Hide the text. */
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+	}
+
 
 	}
 
