--- a/app/templates/profiles/club/profile.html
+++ b/app/templates/profiles/club/profile.html
@@ -71,65 +71,67 @@
   -->
   <div id="profile-tabs" class="container">
     <div class="tabs is-centered is-fullwidth is-toggle is-large" style="color: black;">
-  <ul>
-    <li class="is-active" data-content="#profile-allies">
-      <a>
-        <span class="icon is-small"><i class="fas fa-group" aria-hidden="true"></i></span>
-        <span class="tabtext">Members</span>
-      </a>
-    </li>
-    <li data-content="#profile-clubs">
-      <a>
-        <span class="icon is-small"><i class="fab fa-black-tie" aria-hidden="true"></i></span>
-        <span class="tabtext">Roles</span>
-      </a>
-    </li>
-    <li data-content="#profile-projects">
-      <a>
-        <span class="icon is-small"><i class="fas fa-wifi" aria-hidden="true"></i></span>
-        <span class="tabtext">Comms</span>
-      </a>
-    </li>
-  </ul>
-</div>
- <div id="profile-tabs-content">
-    <div id="profile-allies" class="profile-associate">
-      {% for member in club.group.members %}
-      <div class="subprofile box">
-        <div class="subprofile-image-wrap">
-        <a class="subprofile-image" href="{{url_for('profiles.user',username=member.username) | replace('%40', '@')}}">
-            <img alt draggable="false" class="subprofile-image-content" src="{{member.profile_photo.src}}">
+    <ul>
+      <li class="is-active" data-content="#profile-allies">
+        <a>
+          <span class="icon is-small"><i class="fas fa-group" aria-hidden="true"></i></span>
+          <span class="tabtext">Members</span>
         </a>
-      </div>
-        <div class="subprofile-content">
-          <a class="subprofile-identity" href="{{url_for('profiles.user',username=member.username) | replace('%40', '@')}}">
-            <span class="subprofile-name selectable"><b>{% if member.name %}{{member.name}}{% else %}{{member.username}}{% endif %}</b></span>
-            <br>
-            <span class="subprofile-username selectable">@{{member.username}}</span>
-          </a>
-          <br>
-        <span class="subprofile-bio selectable" maxlenght="30">{% if member.bio %}{{member.bio}}{% endif %}</span>
-      </div>
-      </div>
-      {% endfor %}
-      {% if current_user in club.group.members and club.group.member_has_role(member=current_user, role_title="Master") %}
-      <a id="members-button"><div class="add-specific-button"><span>Add member</span></div></a>
-      {% endif %}
+      </li>
+      <li data-content="#profile-clubs">
+        <a>
+          <span class="icon is-small"><i class="fab fa-black-tie" aria-hidden="true"></i></span>
+          <span class="tabtext">Roles</span>
+        </a>
+      </li>
+      <li data-content="#profile-projects">
+        <a>
+          <span class="icon is-small"><i class="fas fa-wifi" aria-hidden="true"></i></span>
+          <span class="tabtext">Comms</span>
+        </a>
+      </li>
+    </ul>
     </div>
-    <div id="profile-clubs" class="profile-associate vanish">
-      
-      {% for role in club.roles %}
-      {% endfor %}
-      {% if user==current_user and current_user in club.group.members %}
-      <div class="add-specific-button" id="create-club-button"><span>Add role</span></div>
-      {% endif %}
+    {%if current_user in club.group.members %}
+    <div id="profile-tabs-content">
+        <div id="profile-allies" class="profile-associate">
+          {% for member in club.group.members %}
+          <div class="subprofile box">
+            <div class="subprofile-image-wrap">
+            <a class="subprofile-image" href="{{url_for('profiles.user',username=member.username) | replace('%40', '@')}}">
+                <img alt draggable="false" class="subprofile-image-content" src="{{member.profile_photo.src}}">
+            </a>
+          </div>
+            <div class="subprofile-content">
+              <a class="subprofile-identity" href="{{url_for('profiles.user',username=member.username) | replace('%40', '@')}}">
+                <span class="subprofile-name selectable"><b>{% if member.name %}{{member.name}}{% else %}{{member.username}}{% endif %}</b></span>
+                <br>
+                <span class="subprofile-username selectable">@{{member.username}}</span>
+              </a>
+              <br>
+            <span class="subprofile-bio selectable" maxlenght="30">{% if member.bio %}{{member.bio}}{% endif %}</span>
+          </div>
+          </div>
+          {% endfor %}
+          {% if current_user in club.group.members %}
+          <a id="members-button"><div class="add-specific-button"><span>Add member</span></div></a>
+          {% endif %}
+        </div>
+        <div id="profile-clubs" class="profile-associate vanish">
+          
+          <!--{% for role in club.roles %}
+          {% endfor %}-->
+          {% if current_user in club.group.members %}
+          <a id="roles-button"><div class="add-specific-button" id="create-club-button"><span>Add role</span></div></a>
+          {% endif %}
+        </div>
+        <div id="profile-projects" class="profile-associate vanish">
+          {% if current_user in club.group.members %}
+          <div class="add-specific-button" id="create-project-button"><span>Add comm</span></div>
+          {% endif %}
+        </div>
     </div>
-    <div id="profile-projects" class="profile-associate vanish">
-      {% if user==current_user and current_user in club.group.members %}
-      <div class="add-specific-button" id="create-project-button"><span>Add comm</span></div>
-      {% endif %}
-    </div>
- </div>
+    {% endif %}
   </div>
 </div>
 
@@ -144,6 +146,8 @@
 {% endwith %}
 {% elif request.url_rule.endpoint == 'profiles.club_add_members' %}
 {% include "profiles/add-members.html" %}
+{% elif request.url_rule.endpoint == 'profiles.club_add_roles' %}
+{% include "profiles/add-roles.html" %}
 {% endif %}
 
 {% endblock %}
@@ -156,6 +160,7 @@
 <link rel="stylesheet" href="/static/css/profiles/edit.css">
 <link rel="stylesheet" href="/static/css/profiles/photo.css">
 <link rel="stylesheet" href="/static/css/profiles/add-members.css">
+<link rel="stylesheet" href="/static/css/profiles/add-roles.css">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
 <!-- Probably good for now to have this below-->
 <script src="/static/js/profiles/user/profile.js"></script>
@@ -166,6 +171,7 @@
 <script src="/static/js/load-image.js"></script>
 <script src="/static/js/datepicker.js"></script>
 <script src="/static/js/profiles/add-members.js"></script>
+<script src="/static/js/profiles/add-roles.js"></script>
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 <script type="text/javascript">
 
@@ -428,6 +434,11 @@ load_add_members_js();
     e.preventDefault();
   });
 
+  $(document).on('click', '#roles-button', function(e) {
+    redirect({id:"club-roles"},"Club Roles Permission", "/€"+handle+"/roles/", changeRoles);
+    e.preventDefault();
+  });
+
 $(document).on('click', '.close', function() {
   redirect({id:"club-profile"}, "Profile", "/€{{club.handle}}/", changeToProfile);
 });
@@ -450,6 +461,10 @@ $(window).on("popstate", function() {
 
   else if (window.history.state.id == "club-members") {
     changeToMembers();
+  }
+
+  else if (window.history.state.id == "club-roles") {
+    changeRoles();
   }
 
 
@@ -483,12 +498,21 @@ function changeToMembers() {
   $(document.body).addClass('noscroll');
 }
 
+function changeRoles() {
+  $("#modal-box").append(`
+    {% include "profiles/add-roles.html" %}`);
+  load_add_roles_js()
+  $(document.body).addClass('noscroll');
+}
+
 {% if request.url_rule.endpoint == 'profiles.edit_club' %}
 window.history.replaceState({id:"edit-club"},"Edit club", "/€{{club.handle}}/edit/");
 {% elif request.url_rule.endpoint == 'profiles.club_photo' %}
 window.history.replaceState({id:"club-photo"},"Profile photo", "/€{{club.handle}}/");
 {% elif request.url_rule.endpoint == 'profiles.club_members' %}
 window.history.replaceState({id:"club-add-members"},"Club add members", "/€{{club.handle}}/add-members/");
+{% elif request.url_rule.endpoint == 'profiles.club_roles' %}
+window.history.replaceState({id:"club-add-roles"},"Club add roles", "/€{{club.handle}}/add-roles/");
 {% else %}
 window.history.replaceState({id:"club-profile"},"Profile", "./");
 {% endif %}
