--- a/app/templates/comms/feedback/fb.html
+++ b/app/templates/comms/feedback/fb.html
@@ -1,4 +1,4 @@
-<div class="fb subprofile box hoverable" style="text-align: left;" data-id="{% if fb %}{{fb.id}}{% else %}\\id//{% endif %}">
+<div class="fb ctw-media subprofile box hoverable" style="text-align: left;" data-id="{% if fb %}{{fb.id}}{% else %}\\id//{% endif %}">
 <div class="ballot">
 	<button class="button transition is-small ballot-item is-inverted is-dark vote upvote {% if is_upvoted %}is-info{% else %}\\upvote_button_class//{% endif %}" data-on="is-info" data-active="{% if is_upvoted %}true{% else %}\\upvote_button_active//{% endif %}">
       <span class="icon is-medium">
